--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
     "mongoose-aggregate-paginate-v2": "^1.1.1",
+    "mongoose-sequence": "^6.0.1",
     "multer": "^1.4.5-lts.1",
     "streamifier": "^0.1.1",
     "validator": "^13.12.0"
