--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "cmdk": "^1.0.0",
     "domparser": "^0.1.1",
     "dotenv": "^16.4.5",
+    "jose": "^5.8.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.408.0",
