--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "next-cookies": "^2.0.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
